--- a/constellation.kv
+++ b/constellation.kv
@@ -1,34 +1,48 @@
 <GalaxyViewer>
+    navbar: galaxy_navbar
     BoxLayout:
+        size: root.width, root.height
         orientation: 'vertical'
         BoxLayout:
             id: galaxy_navbar
             size_hint: 1, None
+            size: self.width, 50
+            Button:
+                text: 'Open/Close Menu'
+                on_press: root.toggle_menu()
+            Button:
+                text: '2'
+            Button:
+                text: '3'
+            Button:
+                text: '4'
         Widget:
+            size_hint: 1, 1
             canvas:
                 Color:
                     rgb: 1, 0, 0
                 Rectangle:
-                    size: root.width, root.height
+                    size: self.width, self.height
                     pos: 0, 0
                 Color:
                     rgb: 0, 1, 0
                 Rectangle:
-                    size: 100, 100
                     pos: 100, 100
 
 
 <GameMenu>:  # Takes over the whole screen galaxy aint clickable (hopefully) since it's literally everywhere.
     box_layout: box_layout1
+    test_button: button_navbar
     BoxLayout:
         id: box_layout1
-        size: root.width - 200, root.height - 200
-        pos: 100, 100
+        size: root.width, root.height
+        pos: 0, 0
         orientation: 'vertical'
         BoxLayout:
             id: navigation_bar
             size_hint: 1, 1
             Button:
+                id: button_navbar
                 text: "Navbar"
         BoxLayout:
             id: game_content
