--- a/constellation.kv
+++ b/constellation.kv
@@ -20,8 +20,6 @@
     size: self.parent.width, 50
     pos: self.parent.pos[0], self.parent.height - self.height + self.parent.pos[1]
 
-    canvas_color: None
-
 <GalaxyViewer>
     Widget:
         size: root.parent.width, root.parent.height
@@ -53,7 +51,7 @@
         text: 'Open/Close Menu'
         style_classes: ["link", "link_nav_header", "primary"]
 
-        on_press: root.toggle_menu()
+        on_press: root.ui_events['toggle_GameMenu']()
 
     CustomButton:
         id: empire_menu
@@ -102,6 +100,7 @@
         name: 'Game Menu Navbar'
         id: custom_navbar_game_menu
         style_classes: ['navbar_light']
+        size_hint_y: None
 
         CustomButton:
             text: 'Dank'
@@ -131,7 +130,6 @@
             style_classes: ["link"]
 
     BoxLayout:
-        size_hint: 1, 11
         orientation: 'horizontal'
         Button:
             size_hint:3, 1
