General edits to the Canvas and Sidebar system.

--- a/constellation.kv
+++ b/constellation.kv
@@ -139,6 +139,11 @@
     BoxLayout:
         orientation: 'horizontal'
         CustomSidebar:
+            style_classes: ['sidebar_dark']
+            CustomButton:
+                name: 'but1'
+                text: 'Sidebar link 1'
+                style_classes: ['link']
         Button
             text: 'Game Content'
 
