Colour and styling correction

--- a/constellation.kv
+++ b/constellation.kv
@@ -34,7 +34,6 @@
     size_hint_x: None
     size: 350, self.parent.height
     pos: self.parent.pos
-    padding: 10
 
 <GalaxyViewer>
     Widget:
@@ -152,7 +151,7 @@
             CustomButton:
                 name: 'but1'
                 text: 'Sidebar link 1'
-                style_classes: ['link']
+                style_classes: ["link", "link_nav_header", "primary"]
             CustomButton:
                 name: 'but2'
                 text: 'Sidebar link 2'
