Minor style edits

--- a/constellation.kv
+++ b/constellation.kv
@@ -103,6 +103,8 @@
             size: self.size
 
     CustomSidebar:
+        right: root.right
+        top: root.top
         style_classes: ['sidebar_dark']
         CustomButton:
             text: 'Sidebar link 1'
