Recursive function updated.
Updated recursive toggle_menu function as well as some small bug fixes.

--- a/constellation.kv
+++ b/constellation.kv
@@ -103,8 +103,7 @@
             size: self.size
 
     CustomSidebar:
-        right: root.right
-        top: root.top
+        pos: root.pos
         style_classes: ['sidebar_dark']
         CustomButton:
             text: 'Sidebar link 1'
