--- a/constellation.kv
+++ b/constellation.kv
@@ -1,4 +1,5 @@
 #:import math math
+#:import Window kivy.core.window.Window
 # Custom Styles of default Widgets
 <Widget>:
     canvas.after:
@@ -193,10 +194,20 @@
     galaxy_viewer: galaxy_viewer_widget
     galaxy_navbar: galaxy_navbar_widget
     game_menu: game_menu_widget
+    screen_manager_constellation_widget: screen_manager_constellation_widget
 
     GalaxyViewer:
         id: galaxy_viewer_widget
     GalaxyNavbar:
         id: galaxy_navbar_widget
-    GameMenu:
-        id: game_menu_widget
+    ScreenManager:
+        size: Window.size[0] - 40, Window.size[1] - 90
+        pos: 20, 20
+        id: screen_manager_constellation_widget
+        Screen:
+            name: "game_menu"
+            GameMenu:
+                id: game_menu_widget
+        Screen:
+            name: "blank_screen"
+            Widget:
