--- a/constellation.kv
+++ b/constellation.kv
@@ -14,7 +14,14 @@
 <CustomLabel@Label>:
     size: self.texture_size  # For some reason this and the one below make it work.
     size_hint: None, None
+    color: 0, 0, 0, 1
     font_size: 16
+
+
+<TextInputGroup@BoxLayout>:
+    size_hint: None, None
+    size: self.size[0], 34
+    orientation: 'horizontal'
 
 
 <CustomButton@Button>:
@@ -43,6 +50,52 @@
     size_hint_x: None
     size: 350, self.parent.height
     pos: self.parent.pos
+
+<IndustryTab@BoxLayout>:
+    id: industry_tab
+    orientation: 'vertical'
+
+    BoxLayout:
+        orientation: 'vertical'
+        size_hint: None, None
+        CustomLabel
+            text: 'Industry Tab'
+            font_size: 96
+        TextInputGroup:
+            CustomLabel:
+                size: self.size[0], self.parent.height
+                text: 'Building Type: '
+            TextInput:
+                size_hint: None, None
+                size: self.size[0], 28
+                id: building_type
+                text: ''
+        TextInputGroup:
+            CustomLabel:
+                size: self.size[0], self.parent.height
+                text: 'Runs: '
+            TextInput:
+                size_hint: None, None
+                size: self.size[0], 28
+                id: building_runs
+                text: ''
+        TextInputGroup:
+            CustomLabel:
+                size: self.size[0], self.parent.height
+                text: 'Factories: '
+            TextInput:
+                size_hint: None, None
+                size: self.size[0], 28
+                id: building_factories
+                text: ''
+        CustomButton:
+            text: 'Submit'
+            id: submit_construction_project
+            style_classes: ['button']
+            on_press: industry_tab.submit_construction_project_details(building_type.text.strip(), building_runs.text.strip(), building_factories.text.strip())
+
+
+
 
 <GalaxyViewer>
 
@@ -173,22 +226,8 @@
                 style_classes: ["link"]
 
         IndustryTab:
-            id: industry_tab
-
-            orientation: 'vertical'
-            BoxLayout:
-                orientation: 'vertical'
-                size_hint: None, None
-                CustomLabel
-                    text: 'Wowee'
-                    color: 0, 0, 0, 1
-                Button:
-                    size_hint: [None, None]
-                    text: str(self.pos)
-                Button:
-                    size_hint: [None, None]
-                    text: 'Instead of here'
-
+            visible: False
+            pos: self.parent.pos
 
 <ConstellationWidget>:
     galaxy_viewer: galaxy_viewer_widget
